# Local-LLMs

./: .gitignore  README.md  model.py  pyproject.toml  requirements.txt
backend/: __init__.py  auth.py  config.py  context_builder.py  database.py  file_parser.py  handlers.py  llm_adapter.py  logging_config.py  router.py  server.py  token_estimator.py
config/: default.yaml  development.yaml
frontend/: index.html
frontend/css/: animations.css  components.css  main.css  theme.css
frontend/js/: app.js  core.js  renderer.js  state.js  storage.js  stream.js  ui.js  uploader.js
scripts/: build.sh  dev.sh  test.sh
tests/backend/: test_context_builder.py
